[package]
name = "account"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "account"
path = "src/main.rs"

#[dependencies]
#configuration = { path = "../../library/configuration" }
#error = { path = "../../library/error" }
#status = { path = "../../library/status" }
#async-trait = { file = "../../dependencies.toml" }
#futures = { file = "../../dependencies.toml" }
#amiquip = { file = "../../dependencies.toml" }
#serde = { file = "../../dependencies.toml" }
#tonic = { file = "../../dependencies.toml" }
#prost = { file = "../../dependencies.toml" }
#tokio = { file = "../../dependencies.toml" }
#mongodb = { file = "../../dependencies.toml" }
#password-hash = { file = "../../dependencies.toml" }
#argon2 = { file = "../../dependencies.toml" }
#rand = { file = "../../dependencies.toml" }
#
#[build-dependencies]
#protoc-bin-vendored = { file = "../../dependencies.toml" }
#tonic-build = { file = "../../dependencies.toml" }

[dependencies]
configuration = { path = "../../library/configuration" }
error = { path = "../../library/error" }
status = { path = "../../library/status" }
async-trait = { version = "0.1.80" }
futures = { version = "0.3.30" }
amiquip = { version = "0.4.2" }
serde = { version = "1.0.197" }
tonic = { version = "0.11.0" }
prost = { version = "0.12.4" }
tokio = { version = "1.37.0" }
mongodb = { version = "2.8.2" }
password-hash = { version = "0.5.0" }
argon2 = { version = "0.5.3" }
rand = { version = "0.8.5" }

[build-dependencies]
protoc-bin-vendored = { version = "3.0.0" }
tonic-build = { version = "0.11.0" }
