[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gateway"
path = "src/main.rs"

[dependencies]
configuration = { path = "../../library/configuration" }
interceptor = { path = "../../library/interceptor" }
async-trait = "0.1.73"
tonic = "0.9.2"
tower = "0.4.13"
prost = "0.11.6"
tokio = { version = "1.24.2", features = ["rt-multi-thread"] }

[build-dependencies]
protoc-bin-vendored = "3.0.0"
tonic-build = "0.9.1"