[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gateway"
path = "src/main.rs"

[dependencies]
configuration = { path = "../../library/configuration" }
async-trait = { version = "0.1.80" }
tonic-async-interceptor = { version = "0.11.1" }
tonic = { version = "0.11.0" }
tower = { version = "0.4.13" }
prost = { version = "0.12.4" }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
protoc-bin-vendored = { version = "3.0.0" }
tonic-build = { version = "0.11.0" }