[package]
name = "matchmaking"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "matchmaking"
path = "src/main.rs"

[dependencies]
amqp = { path = "../../library/amqp" }
configuration = { path = "../../library/configuration" }
error = { path = "../../library/error" }
status = { path = "../../library/status" }
async-trait = { version = "0.1.80" }
futures = { version = "0.3.30" }
lapin = { version = "2.3.1" }
mongodb = { version = "2.8.2" }
redis = { version = "0.25.3" }
serde = { version = "1.0.197" }
tonic = { version = "0.11.0" }
prost = { version = "0.12.4" }
tokio = { version = "1.37.0" }

[build-dependencies]
protoc-bin-vendored = { version = "3.0.0" }
tonic-build = { version = "0.11.0" }