[package]
name = "profile"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "profile"
path = "src/main.rs"

[dependencies]
configuration = { path = "../../library/configuration" }
error = { path = "../../library/error" }
status = { path = "../../library/status" }
async-trait = { version = "0.1.80" }
futures = { version = "0.3.30" }
amiquip = { version = "0.4.2" }
mongodb = { version = "2.8.2" }
serde = { version = "1.0.197" }
redis = { version = "0.25.3" }
tonic = { version = "0.11.0" }
prost = { version = "0.12.4" }
tokio = { version = "1.37.0" }

[build-dependencies]
protoc-bin-vendored = { version = "3.0.0" }
tonic-build = { version = "0.11.0" }