[package]
name = "recommendation"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "recommendation"
path = "src/main.rs"

[dependencies]
amqp = { path = "../../library/amqp" }
configuration = { path = "../../library/configuration" }
error = { path = "../../library/error" }
status = { path = "../../library/status" }
async-trait = { version = "0.1.80" }
futures = { version = "0.3.30" }
lapin = { version = "2.3.1" }
redis = { version = "0.25.3" }
tonic = { version = "0.11.0" }
prost = { version = "0.12.4" }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
protoc-bin-vendored = { version = "3.0.0" }
tonic-build = { version = "0.11.0" }