[package]
name = "token"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "token"
path = "src/main.rs"

#[dependencies]
#configuration = { path = "../../library/configuration" }
#error = { path = "../../library/error" }
#status = { path = "../../library/status" }
#async-trait = { file = "../../dependencies.toml" }
#futures = { file = "../../dependencies.toml" }
#tonic = { file = "../../dependencies.toml" }
#prost = { file = "../../dependencies.toml" }
#tokio = { file = "../../dependencies.toml", features = ["macros", "rt-multi-thread"] }
#jwt = { file = "../../dependencies.toml" }
#hmac = { file = "../../dependencies.toml" }
#sha2 = { file = "../../dependencies.toml" }
#redis = { file = "../../dependencies.toml" }
#
#[build-dependencies]
#protoc-bin-vendored = { file = "../../dependencies.toml" }
#tonic-build = { file = "../../dependencies.toml" }

[dependencies]
configuration = { path = "../../library/configuration" }
error = { path = "../../library/error" }
status = { path = "../../library/status" }
async-trait = { version = "0.1.80" }
futures = { version = "0.3.30" }
tonic = { version = "0.11.0" }
prost = { version = "0.12.4" }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
jwt = { version = "0.16.0" }
hmac = { version = "0.12.1" }
sha2 = { version = "0.10.8" }
redis = { version = "0.25.3" }

[build-dependencies]
protoc-bin-vendored = { version = "3.0.0" }
tonic-build = { version = "0.11.0" }