[package]
name = "token"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "token"
path = "src/main.rs"

[dependencies]
configuration = { path = "../../library/configuration" }
error = { path = "../../library/error" }
status = { path = "../../library/status" }
async-trait = { version = "0.1.80" }
futures = { version = "0.3.30" }
tonic = { version = "0.11.0" }
prost = { version = "0.12.4" }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
jwt = { version = "0.16.0" }
hmac = { version = "0.12.1" }
sha2 = { version = "0.10.8" }
redis = { version = "0.25.3" }

[build-dependencies]
protoc-bin-vendored = { version = "3.0.0" }
tonic-build = { version = "0.11.0" }